--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -24,10 +24,14 @@ h2 {
     margin: 15px;
 }
 
+section div {
+    padding: 15px;
+}
+
 article {
     background-color:lightblue;
     padding: 15px;
-    height: 1000px;
+    height: 700px;
 }
 
 .article-title {
